--- a/index.htm
+++ b/index.htm
@@ -27,7 +27,7 @@
             <p class="text-lg md:text-xl text-gray-300 mb-8 max-w-3xl mx-auto">
                 Empowering underserved populations in emerging markets with personalized health insights and proactive wellness tools.
             </p>
-            <a href="https://forms.gle/YOUR_GOOGLE_FORM_LINK_HERE" target="_blank" class="inline-block bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 px-8 rounded-full shadow-lg transition duration-300 ease-in-out transform hover:scale-105">
+            <a href=https://forms.gle/r9SjbTsUgWQcg3Us9" target="_blank" class="inline-block bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 px-8 rounded-full shadow-lg transition duration-300 ease-in-out transform hover:scale-105">
                 Join Our Waitlist
             </a>
             <div class="mt-12 max-w-4xl mx-auto rounded-xl overflow-hidden shadow-2xl">
